// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CBUInput is neither optional nor required when specified 1`] = `
<Input
  autoCorrect={false}
  label="form.cbu"
  placeholder="form.cbu.placeholder"
/>
`;

exports[`CBUInput is optional when specified 1`] = `
<Input
  autoCorrect={false}
  label="form.cbu"
  placeholder="form.cbu.placeholder"
  required={false}
/>
`;

exports[`CBUInput renders correctly 1`] = `
<Input
  autoCorrect={false}
  label="form.cbu"
  placeholder="form.cbu.placeholder"
/>
`;
